--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
         <title>Data Structures & Algorithms</title>
     </head>
     <body>
-        <h1>Data Structures & Alorithms</h1>
+        <h1>Data Structures & Algorithms</h1>
         <article id="logs"></article>
     </body>
 </html>
